# bazel-bazic-learning

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel
lib/: lib.rs
src/: main.cpp  main.py
